--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://taraspro5.github.io/goit-react-hw-06-phonebook/",
+  "homepage": "https://taraspro5.github.io/goit-react-hw-07-phonebook/",
   "dependencies": {
     "@redux-devtools/extension": "^3.2.6",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
     "formik": "^2.4.5",
     "nanoid": "^5.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-loader-spinner": "^5.4.5",
     "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
